StackVpcNat3LayersSgEp18.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This AWS CloudFormation Template creates a VPC, Public and Private Subnets and Route Tables, VGW, CGW and VPN Connection. Created by jpsant@amazon.com",
    "Parameters": {
        "VpcName": {
            "Type": "String",
            "Description": "VPC Name Tag.",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "Vpc"
        },
        "Environment": {
            "Type": "String",
            "Description": "Environment Name Tag.",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "Dev"
        },
        "VpcCidr": {
            "Type": "String",
            "Description": "IP Address prefix for the VPC, in CIDR notation.",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.0.0/16",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "PublicSubnet1Name": {
            "Type": "String",
            "Description": "PublicSubnet1 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PublicSubnet1"
        },
        "PublicSubnet1Cidr": {
            "Type": "String",
            "Description": "IP Address prefix for the Public Subnet 1, in CIDR notation.",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.1.0/24",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "PublicSubnet2Name": {
            "Type": "String",
            "Description": "PublicSubnet2 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PublicSubnet2"
        },
        "PublicSubnet2Cidr": {
            "Type": "String",
            "Description": "IP Address prefix for the Public Subnet 2, in CIDR notation.",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.2.0/24",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "PrivateSubnet1Name": {
            "Type": "String",
            "Description": "PrivateSubnet1 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PrivateSubnet1"
        },
        "PrivateSubnet1Cidr": {
            "Type": "String",
            "Description": "IP Address prefix for the Public Subnet 2, in CIDR notation.",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.3.0/24",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "PrivateSubnet2Name": {
            "Type": "String",
            "Description": "PrivateSubnet2 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PrivateSubnet2"
        },
        "PrivateSubnet2Cidr": {
            "Type": "String",
            "Description": "IP Address prefix for the Private Subnet 2, in CIDR notation.",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.4.0/24",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "PrivateSubnet3Name": {
            "Type": "String",
            "Description": "PrivateSubnet3 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PrivateSubnet3"
        },
        "PrivateSubnet3Cidr": {
            "Type": "String",
            "Description": "IP Address prefix for the Private Subnet 3, in CIDR notation.",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.5.0/24",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "PrivateSubnet4Name": {
            "Type": "String",
            "Description": "PrivateSubnet4 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PrivateSubnet4"
        },
        "PrivateSubnet4Cidr": {
            "Type": "String",
            "Description": "IP Address prefix for the Private Subnet 4, in CIDR notation.",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.6.0/24",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
        "PublicSg1Name": {
            "Type": "String",
            "Description": "PublicSg1 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PublicSg1"
        },
        "PrivateSg1Name": {
            "Type": "String",
            "Description": "PrivateSg1 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PrivateSg1"
        },
        "PrivateSg2Name": {
            "Type": "String",
            "Description": "PrivateSg2 Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PrivateSg2"
        },
        "VPNAddress": {
            "Type": "String",
            "Description": "IP Address of your Gateway VPN device",
            "MinLength": "7",
            "MaxLength": "15",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})",
            "ConstraintDescription": "must be a valid IP address of the form x.x.x.x"
        },
        "IGatewayName": {
            "Type": "String",
            "Description": "Internet Gateway Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "Igw"
        },
        "VPNGatewayName": {
            "Type": "String",
            "Description": "Virtual Private Gateway Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "Vgw"
        },
        "CustomerGatewayName": {
            "Type": "String",
            "Description": "Customer Gateway Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "Cgw"
        },
        "PublicRouteTableName": {
            "Type": "String",
            "Description": "Public Route Table Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PublicRouteTable"
        },
        "PrivateRouteTableName": {
            "Type": "String",
            "Description": "Private Route Table Name Tag",
            "MinLength": "3",
            "MaxLength": "40",
            "Default": "PrivateRouteTable"
        },
        "OnPremiseCIDR": {
            "Type": "String",
            "Description": "IP Address range for your existing infrastructure",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "192.168.0.0/16",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "CidrBlock": {
                    "Ref": "VpcCidr"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "VpcName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "VPN Connected VPC"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "bedd7557-4c4a-45cd-943b-50538ca41a3f"
                }
            }
        },
        "PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1a",
                "CidrBlock": {
                    "Ref": "PublicSubnet1Cidr"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PublicSubnet1Name"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Internet Connected Subnet"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "10369a1c-5981-4cd7-88c9-dabd4b7991ef"
                }
            }
        },
        "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1c",
                "CidrBlock": {
                    "Ref": "PublicSubnet2Cidr"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PublicSubnet2Name"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Internet Connected Subnet"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "ec820f8c-76f2-4cd6-958a-5ac8594f16e5"
                }
            }
        },
        "PrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1a",
                "CidrBlock": {
                    "Ref": "PrivateSubnet1Cidr"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PrivateSubnet1Name"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "VPN Connected Subnet"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "127aa970-a961-4084-a867-9c2c45880e4c"
                }
            }
        },
        "PrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1c",
                "CidrBlock": {
                    "Ref": "PrivateSubnet2Cidr"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PrivateSubnet2Name"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "VPN Connected Subnet"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "e56f7c66-da3d-44df-8298-02f2885b0808"
                }
            }
        },
        "PrivateSubnet3": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1a",
                "CidrBlock": {
                    "Ref": "PrivateSubnet3Cidr"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PrivateSubnet3Name"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "VPN Connected Subnet"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "937a9cc6-7471-4ecd-9b48-18a9e5f98b37"
                }
            }
        },
        "PrivateSubnet4": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1c",
                "CidrBlock": {
                    "Ref": "PrivateSubnet4Cidr"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PrivateSubnet4Name"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "VPN Connected Subnet"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "2cdb38f5-421b-4f39-b960-13c6740ca757"
                }
            }
        },
        "IGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "IGatewayName"
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "92de9466-8c90-43c1-9bb7-78ff393cb931"
                }
            }
        },
        "InternetGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "IGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "77069cfd-6835-4fde-86ef-7569c92b2bf9"
                }
            }
        },
        "VPNGateway": {
            "Type": "AWS::EC2::VPNGateway",
            "Properties": {
                "Type": "ipsec.1",
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "VPNGatewayName"
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "ffb32df0-2f0a-4632-bb67-f322c4a890fe"
                }
            }
        },
        "VPNGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "VpnGatewayId": {
                    "Ref": "VPNGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "d2d6862b-323b-4063-9cd8-281e767259bd"
                }
            }
        },
        "CustomerGateway": {
            "Type": "AWS::EC2::CustomerGateway",
            "Properties": {
                "Type": "ipsec.1",
                "BgpAsn": "65000",
                "IpAddress": {
                    "Ref": "VPNAddress"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "CustomerGatewayName"
                        }
                    },
                    {
                        "Key": "VPN",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    "Gateway to ",
                                    {
                                        "Ref": "VPNAddress"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "a57e03ef-7230-4e4d-ace0-7cbd19f0a8c6"
                }
            }
        },
        "VPNConnection": {
            "Type": "AWS::EC2::VPNConnection",
            "Properties": {
                "Type": "ipsec.1",
                "StaticRoutesOnly": "true",
                "CustomerGatewayId": {
                    "Ref": "CustomerGateway"
                },
                "VpnGatewayId": {
                    "Ref": "VPNGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "5d6c364e-8f06-4768-9e76-5d50aa9ac882"
                }
            }
        },
        "VPNConnectionRoute": {
            "Type": "AWS::EC2::VPNConnectionRoute",
            "Properties": {
                "VpnConnectionId": {
                    "Ref": "VPNConnection"
                },
                "DestinationCidrBlock": {
                    "Ref": "OnPremiseCIDR"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "aa20413e-a7a1-4875-8427-d4d5cc49cb5a"
                }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PublicRouteTableName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Connected Subnet Public"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "da1e6b3b-11e9-4725-a061-7f23b8622ca1"
                }
            }
        },
        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PrivateRouteTableName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Connected Private Public"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "3d653f55-544a-4e0b-8d64-6161f4b4804d"
                }
            }
        },
        "PublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "PublicSubnet2"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "c4d94701-3e29-4794-a197-0cabb596f0a5"
                }
            }
        },
        "PrivateRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "VPNGatewayAttachment",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "DestinationCidrBlock": {
                    "Ref": "OnPremiseCIDR"
                },
                "GatewayId": {
                    "Ref": "VPNGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "ebc901b8-4693-4216-a163-731da6f4087d"
                }
            }
        },
        "myVPNGatewayRouteProp" : {
          "Type" : "AWS::EC2::VPNGatewayRoutePropagation",
          "Properties" : {
            "RouteTableIds" : [{"Ref" : "PublicRouteTable"}, {"Ref" : "PrivateRouteTable"}],
            "VpnGatewayId" : {"Ref" : "VPNGateway"}
          }
        },
        "EC2SRTAW3WQ": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "5a5d2198-26f2-4e18-bbd3-d87ae083823b"
                }
            }
        },
        "EC2SRTA4N27L": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "PrivateSubnet2"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "e973dbfe-3079-4631-b15d-8c50692f16d9"
                }
            }
        },
        "EC2SRTA27IFM": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "PrivateSubnet1"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "c8d26376-cdd5-48fa-9d71-9a60793aae52"
                }
            }
        },
        "NatGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NatEip",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "0b9afdf7-c2d3-4bf3-83de-06ff514e4004"
                }
            },
            "DependsOn": [
                "InternetGatewayAttachment",
                "NatEip"
            ]
        },
        "NatEip": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "b08e5459-8a8a-47c9-b875-a9256f9b32c9"
                }
            }
        },
        "NatRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NatGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "15ba5392-3838-48fa-aea3-188a8c07717a"
                }
            }
        },
        "EC2SRTA11Y0U": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "PrivateSubnet3"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "8a0005f8-1a84-464a-8b3b-472d70630e5a"
                }
            }
        },
        "EC2SRTAL3UW": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "PrivateSubnet4"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "e29368cd-9eb8-414a-ae7f-7f40fa46b526"
                }
            }
        },
        "PublicSg1": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security Group for Public Fleets",
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PublicSg1Name"
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "7e23b99e-cb0c-4987-9e10-bc7277201477"
                }
            }
        },
        "PrivateSg1": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security Group for Private Fleets",
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PrivateSg1Name"
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "90f1b0c4-023b-482b-8a62-144181027b67"
                }
            }
        },
        "PrivateSg2": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security Group for Private Fleets",
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "PrivateSg2Name"
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "ce529a5c-56a0-4b15-9eac-9634f9f6853f"
                }
            }
        },
        "S3Endpoint": {
            "Type": "AWS::EC2::VPCEndpoint",
            "Properties": {
                "PolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Action": "*",
                            "Effect": "Allow",
                            "Resource": "*",
                            "Principal": "*"
                        }
                    ]
                },
                "RouteTableIds": [
                    {
                        "Ref": "PrivateRouteTable"
                    },
                    {
                        "Ref": "PublicRouteTable"
                    }
                ],
                "ServiceName": {
                    "Fn::Join": [
                        "",
                        [
                            "com.amazonaws.",
                            {
                                "Ref": "AWS::Region"
                            },
                            ".s3"
                        ]
                    ]
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "388bc566-e91f-4cec-b510-7ed311165924"
                }
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "IGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "1df65a7e-6fdb-4ef0-beac-bb23f67ceccc"
                }
            }
        }
    },
    "Outputs": {
        "VPCId": {
            "Description": "The ID of the newly created VPC",
            "Value": {
                "Ref": "VPC"
            }
        },
        "IGatewayId": {
            "Description": "The ID of the newly created Internet Gateway",
            "Value": {
                "Ref": "IGateway"
            }
        },
        "VPNGatewayId": {
            "Description": "The ID of the newly created VPN Gateway",
            "Value": {
                "Ref": "VPNGateway"
            }
        },
        "CustomerGatewayId": {
            "Description": "The ID of the newly created Customer Gateway",
            "Value": {
                "Ref": "CustomerGateway"
            }
        },
        "VPNConnectionId": {
            "Description": "The ID of the newly created VPN Connection",
            "Value": {
                "Ref": "VPNConnection"
            }
        },
        "S3EndpointId": {
            "Description": "The ID of the newly created S3 Endpoint",
            "Value": {
                "Ref": "S3Endpoint"
            }
        },
        "NatGatewayId": {
            "Description": "The ID of the newly created NatGateway",
            "Value": {
                "Ref": "NatGateway"
            }
        },
        "PublicSubnet1Id": {
            "Description": "The ID of the Internet connected subnet",
            "Value": {
                "Ref": "PublicSubnet1"
            }
        },
        "PublicSubnet2Id": {
            "Description": "The ID of the Internet connected subnet",
            "Value": {
                "Ref": "PublicSubnet2"
            }
        },
        "PrivateSubnet1Id": {
            "Description": "The ID of the VPN connected subnet",
            "Value": {
                "Ref": "PrivateSubnet1"
            }
        },
        "PrivateSubnet2Id": {
            "Description": "The ID of the VPN connected subnet",
            "Value": {
                "Ref": "PrivateSubnet2"
            }
        },
        "PrivateSubnet3Id": {
            "Description": "The ID of the VPN connected subnet",
            "Value": {
                "Ref": "PrivateSubnet3"
            }
        },
        "PrivateSubnet4Id": {
            "Description": "The ID of the VPN connected subnet",
            "Value": {
                "Ref": "PrivateSubnet4"
            }
        },
        "PublicSg1Id": {
            "Description": "The ID of the Public Security Group 1",
            "Value": {
                "Ref": "PublicSg1"
            }
        },
        "PrivateSg1Id": {
            "Description": "The ID of the Private Security Group 1",
            "Value": {
                "Ref": "PrivateSg1"
            }
        },
        "PrivateSg2Id": {
            "Description": "The ID of the Private Security Group 2",
            "Value": {
                "Ref": "PrivateSg2"
            }
        }
    },
    "Metadata": {
        "AWS::CloudFormation::Designer": {
            "a57e03ef-7230-4e4d-ace0-7cbd19f0a8c6": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 630,
                    "y": 510
                },
                "z": 1,
                "embeds": []
            },
            "ffb32df0-2f0a-4632-bb67-f322c4a890fe": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 360,
                    "y": 510
                },
                "z": 1,
                "embeds": []
            },
            "5d6c364e-8f06-4768-9e76-5d50aa9ac882": {
                "source": {
                    "id": "a57e03ef-7230-4e4d-ace0-7cbd19f0a8c6"
                },
                "target": {
                    "id": "ffb32df0-2f0a-4632-bb67-f322c4a890fe"
                },
                "z": 1
            },
            "aa20413e-a7a1-4875-8427-d4d5cc49cb5a": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 500,
                    "y": 650
                },
                "z": 1,
                "embeds": [],
                "references": [
                    "5d6c364e-8f06-4768-9e76-5d50aa9ac882"
                ]
            },
            "92de9466-8c90-43c1-9bb7-78ff393cb931": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -940,
                    "y": 500
                },
                "z": 1,
                "embeds": []
            },
            "bedd7557-4c4a-45cd-943b-50538ca41a3f": {
                "size": {
                    "width": 1090,
                    "height": 810
                },
                "position": {
                    "x": -700,
                    "y": 210
                },
                "z": 1,
                "embeds": [
                    "3d653f55-544a-4e0b-8d64-6161f4b4804d",
                    "da1e6b3b-11e9-4725-a061-7f23b8622ca1",
                    "2cdb38f5-421b-4f39-b960-13c6740ca757",
                    "937a9cc6-7471-4ecd-9b48-18a9e5f98b37",
                    "e56f7c66-da3d-44df-8298-02f2885b0808",
                    "127aa970-a961-4084-a867-9c2c45880e4c",
                    "ec820f8c-76f2-4cd6-958a-5ac8594f16e5",
                    "10369a1c-5981-4cd7-88c9-dabd4b7991ef"
                ]
            },
            "3d653f55-544a-4e0b-8d64-6161f4b4804d": {
                "size": {
                    "width": 300,
                    "height": 220
                },
                "position": {
                    "x": -190,
                    "y": 510
                },
                "z": 2,
                "parent": "bedd7557-4c4a-45cd-943b-50538ca41a3f",
                "embeds": [
                    "ebc901b8-4693-4216-a163-731da6f4087d",
                    "15ba5392-3838-48fa-aea3-188a8c07717a"
                ]
            },
            "da1e6b3b-11e9-4725-a061-7f23b8622ca1": {
                "size": {
                    "width": 290,
                    "height": 210
                },
                "position": {
                    "x": -610,
                    "y": 510
                },
                "z": 2,
                "parent": "bedd7557-4c4a-45cd-943b-50538ca41a3f",
                "embeds": [
                    "1df65a7e-6fdb-4ef0-beac-bb23f67ceccc"
                ]
            },
            "1df65a7e-6fdb-4ef0-beac-bb23f67ceccc": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -500,
                    "y": 580
                },
                "z": 3,
                "parent": "da1e6b3b-11e9-4725-a061-7f23b8622ca1",
                "embeds": [],
                "references": [
                    "92de9466-8c90-43c1-9bb7-78ff393cb931"
                ]
            },
            "d2d6862b-323b-4063-9cd8-281e767259bd": {
                "source": {
                    "id": "bedd7557-4c4a-45cd-943b-50538ca41a3f"
                },
                "target": {
                    "id": "ffb32df0-2f0a-4632-bb67-f322c4a890fe"
                },
                "z": 1
            },
            "ebc901b8-4693-4216-a163-731da6f4087d": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -20,
                    "y": 580
                },
                "z": 3,
                "parent": "3d653f55-544a-4e0b-8d64-6161f4b4804d",
                "embeds": [],
                "references": [
                    "ffb32df0-2f0a-4632-bb67-f322c4a890fe"
                ],
                "dependson": [
                    "d2d6862b-323b-4063-9cd8-281e767259bd"
                ]
            },
            "77069cfd-6835-4fde-86ef-7569c92b2bf9": {
                "source": {
                    "id": "92de9466-8c90-43c1-9bb7-78ff393cb931"
                },
                "target": {
                    "id": "bedd7557-4c4a-45cd-943b-50538ca41a3f"
                },
                "z": 1
            },
            "e56f7c66-da3d-44df-8298-02f2885b0808": {
                "size": {
                    "width": 150,
                    "height": 150
                },
                "position": {
                    "x": -320,
                    "y": 820
                },
                "z": 2,
                "parent": "bedd7557-4c4a-45cd-943b-50538ca41a3f",
                "embeds": []
            },
            "127aa970-a961-4084-a867-9c2c45880e4c": {
                "size": {
                    "width": 150,
                    "height": 150
                },
                "position": {
                    "x": -310,
                    "y": 250
                },
                "z": 2,
                "parent": "bedd7557-4c4a-45cd-943b-50538ca41a3f",
                "embeds": [
                    "90f1b0c4-023b-482b-8a62-144181027b67"
                ]
            },
            "ec820f8c-76f2-4cd6-958a-5ac8594f16e5": {
                "size": {
                    "width": 150,
                    "height": 150
                },
                "position": {
                    "x": -610,
                    "y": 820
                },
                "z": 2,
                "parent": "bedd7557-4c4a-45cd-943b-50538ca41a3f",
                "embeds": []
            },
            "c4d94701-3e29-4794-a197-0cabb596f0a5": {
                "source": {
                    "id": "da1e6b3b-11e9-4725-a061-7f23b8622ca1"
                },
                "target": {
                    "id": "ec820f8c-76f2-4cd6-958a-5ac8594f16e5"
                },
                "z": 2
            },
            "10369a1c-5981-4cd7-88c9-dabd4b7991ef": {
                "size": {
                    "width": 150,
                    "height": 150
                },
                "position": {
                    "x": -600,
                    "y": 250
                },
                "z": 2,
                "parent": "bedd7557-4c4a-45cd-943b-50538ca41a3f",
                "embeds": [
                    "7e23b99e-cb0c-4987-9e10-bc7277201477"
                ]
            },
            "5a5d2198-26f2-4e18-bbd3-d87ae083823b": {
                "source": {
                    "id": "da1e6b3b-11e9-4725-a061-7f23b8622ca1"
                },
                "target": {
                    "id": "10369a1c-5981-4cd7-88c9-dabd4b7991ef"
                },
                "z": 2
            },
            "e973dbfe-3079-4631-b15d-8c50692f16d9": {
                "source": {
                    "id": "3d653f55-544a-4e0b-8d64-6161f4b4804d"
                },
                "target": {
                    "id": "e56f7c66-da3d-44df-8298-02f2885b0808"
                },
                "z": 2
            },
            "c8d26376-cdd5-48fa-9d71-9a60793aae52": {
                "source": {
                    "id": "3d653f55-544a-4e0b-8d64-6161f4b4804d"
                },
                "target": {
                    "id": "127aa970-a961-4084-a867-9c2c45880e4c"
                },
                "z": 2
            },
            "0b9afdf7-c2d3-4bf3-83de-06ff514e4004": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -790,
                    "y": 730
                },
                "z": 0,
                "embeds": [],
                "dependson": [
                    "77069cfd-6835-4fde-86ef-7569c92b2bf9",
                    "b08e5459-8a8a-47c9-b875-a9256f9b32c9"
                ],
                "isrelatedto": [
                    "b08e5459-8a8a-47c9-b875-a9256f9b32c9"
                ]
            },
            "b08e5459-8a8a-47c9-b875-a9256f9b32c9": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -790,
                    "y": 830
                },
                "z": 0,
                "embeds": []
            },
            "c78ea96f-f5ae-4c30-ac4e-e3f22f7fd7dc": {
                "source": {
                    "id": "0b9afdf7-c2d3-4bf3-83de-06ff514e4004"
                },
                "target": {
                    "id": "77069cfd-6835-4fde-86ef-7569c92b2bf9"
                },
                "z": 4
            },
            "dbb10205-b3a6-4fe3-b381-b2842c4f1687": {
                "source": {
                    "id": "0b9afdf7-c2d3-4bf3-83de-06ff514e4004"
                },
                "target": {
                    "id": "b08e5459-8a8a-47c9-b875-a9256f9b32c9"
                },
                "z": 4
            },
            "15ba5392-3838-48fa-aea3-188a8c07717a": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -120,
                    "y": 580
                },
                "z": 3,
                "parent": "3d653f55-544a-4e0b-8d64-6161f4b4804d",
                "embeds": [],
                "isrelatedto": [
                    "0b9afdf7-c2d3-4bf3-83de-06ff514e4004"
                ]
            },
            "937a9cc6-7471-4ecd-9b48-18a9e5f98b37": {
                "size": {
                    "width": 150,
                    "height": 150
                },
                "position": {
                    "x": -30,
                    "y": 250
                },
                "z": 2,
                "parent": "bedd7557-4c4a-45cd-943b-50538ca41a3f",
                "embeds": [
                    "ce529a5c-56a0-4b15-9eac-9634f9f6853f"
                ]
            },
            "2cdb38f5-421b-4f39-b960-13c6740ca757": {
                "size": {
                    "width": 150,
                    "height": 150
                },
                "position": {
                    "x": -30,
                    "y": 820
                },
                "z": 2,
                "parent": "bedd7557-4c4a-45cd-943b-50538ca41a3f",
                "embeds": []
            },
            "8a0005f8-1a84-464a-8b3b-472d70630e5a": {
                "source": {
                    "id": "3d653f55-544a-4e0b-8d64-6161f4b4804d"
                },
                "target": {
                    "id": "937a9cc6-7471-4ecd-9b48-18a9e5f98b37"
                },
                "z": 2
            },
            "e29368cd-9eb8-414a-ae7f-7f40fa46b526": {
                "source": {
                    "id": "3d653f55-544a-4e0b-8d64-6161f4b4804d"
                },
                "target": {
                    "id": "2cdb38f5-421b-4f39-b960-13c6740ca757"
                },
                "z": 2
            },
            "7e23b99e-cb0c-4987-9e10-bc7277201477": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -560,
                    "y": 290
                },
                "z": 3,
                "parent": "10369a1c-5981-4cd7-88c9-dabd4b7991ef",
                "embeds": []
            },
            "90f1b0c4-023b-482b-8a62-144181027b67": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -260,
                    "y": 290
                },
                "z": 3,
                "parent": "127aa970-a961-4084-a867-9c2c45880e4c",
                "embeds": []
            },
            "ce529a5c-56a0-4b15-9eac-9634f9f6853f": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 20,
                    "y": 290
                },
                "z": 3,
                "parent": "937a9cc6-7471-4ecd-9b48-18a9e5f98b37",
                "embeds": []
            },
            "388bc566-e91f-4cec-b510-7ed311165924": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -820,
                    "y": 390
                },
                "z": 0,
                "embeds": [],
                "isassociatedwith": [
                    "3d653f55-544a-4e0b-8d64-6161f4b4804d",
                    "da1e6b3b-11e9-4725-a061-7f23b8622ca1"
                ],
                "isrelatedto": [
                    "713c5953-9829-4033-a418-bf9f2f22bb62"
                ]
            },
            "1624419f-fcc3-4d70-ab0d-5fbad3ce0514": {
                "source": {
                    "id": "388bc566-e91f-4cec-b510-7ed311165924"
                },
                "target": {
                    "id": "713c5953-9829-4033-a418-bf9f2f22bb62"
                },
                "z": 11
            },
            "0467c16b-1b94-494d-86fb-cc1543e968ff": {
                "source": {
                    "id": "388bc566-e91f-4cec-b510-7ed311165924"
                },
                "target": {
                    "id": "da1e6b3b-11e9-4725-a061-7f23b8622ca1"
                },
                "z": 11
            }
        }
    }
}
